--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Frontend</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <head>
+    <meta charset="utf-8" />
+    <title>Frontend</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
-        <link type="text/css" rel="stylesheet" href="assets/css/plugins.css">
-        <link type="text/css" rel="stylesheet" href="assets/css/style.css">
-        <link type="text/css" rel="stylesheet" href="assets/css/color.css">
-        <!--  favicons  -->
-        <link rel="shortcut icon" href="assets/images/favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-          <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/plugins.js"></script>
-        <script src="assets/js/scripts.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwJSRi0zFjDemECmFl9JtRj1FY7TiTRRo&amp;libraries=places"></script>
-        <script src="assets/js/map-single.js"></script>
-</body>
+    <link type="text/css" rel="stylesheet" href="assets/css/plugins.css" />
+    <link type="text/css" rel="stylesheet" href="assets/css/style.css" />
+    <link type="text/css" rel="stylesheet" href="assets/css/color.css" />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="assets/css/dashboard-style.css"
+    />
+
+    <!--  favicons  -->
+    <link rel="shortcut icon" href="assets/images/favicon.ico" />
+  </head>
+  <body>
+    <app-root></app-root>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/plugins.js"></script>
+    <script src="assets/js/scripts.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwJSRi0zFjDemECmFl9JtRj1FY7TiTRRo&amp;libraries=places"></script>
+    <script src="assets/js/map-single.js"></script>
+  </body>
 </html>
